--- a/practice-for-ch-rails-music-app-long-practice-main/music_project/app/assets/stylesheets/application.css
+++ b/practice-for-ch-rails-music-app-long-practice-main/music_project/app/assets/stylesheets/application.css
@@ -13,3 +13,26 @@
  *= require_tree .
  *= require_self
  */
+
+
+.fruit-list {
+    text-align: center;
+  }
+  
+
+  .fruit-header {
+    display: flex;
+    justify-content: center;
+  }
+  
+
+  ol li {
+    padding: 10px;
+  }
+  
+  
+  #orange-pictures {
+    display: flex;
+    justify-content: space-around;
+  }
+  
